--- a/index.html
+++ b/index.html
@@ -71,28 +71,26 @@
       </div>
     </nav>
     <div class="image-box">
-      <button class="prev">
-      </button>
-      <button class="next">
-      </button>
+      <button class="prev"></button>
+      <button class="next"></button>
       <div class="product-gallery">
         <img
-          src="./images/image-product-1-thumbnail.jpg"
+          src="./images/image-product-1.jpg"
           alt="product image"
           class="img-1 product-image"
         />
         <img
-          src="./images/image-product-2-thumbnail.jpg"
+          src="./images/image-product-2.jpg"
           alt="product image"
           class="img-2 product-image"
         />
         <img
-          src="./images/image-product-3-thumbnail.jpg"
+          src="./images/image-product-3.jpg"
           alt="product image"
           class="img-3 product-image"
         />
         <img
-          src="./images/image-product-4-thumbnail.jpg"
+          src="./images/image-product-4.jpg"
           alt="product image"
           class="img-4 product-image"
         />
@@ -127,8 +125,8 @@
         </button>
       </div>
       <button class="add-to-cart">
-        <img src="./images/icon-cart.svg" alt="cart icon" class="cart" /> Add to
-        cart
+        <img src="./images/icon-cart1.svg" alt="cart icon" class="cart" />
+        Add to cart
       </button>
     </div>
   </body>
