--- a/index.html
+++ b/index.html
@@ -74,6 +74,43 @@
       <button class="prev"></button>
       <button class="next"></button>
       <div class="product-gallery">
+        <div class="cart">
+          <div class="cart-full">
+            <h2 class="cart-heading">Cart</h2>
+            <hr />
+            <div class="content">
+              <div class="confirm-product">
+                <div class="left">
+                  <div class="product">
+                    <img
+                      src="./images/image-product-1-thumbnail.jpg"
+                      alt="product-image"
+                    />
+                  </div>
+                  <div class="product-details">
+                    <p class="name">Fall Limited Edition Sneakers</p>
+                    <p class="total-price">vvvvv</p>
+                  </div>
+                </div>
+                <div class="delete">
+                  <img
+                    src="./images/icon-delete.svg"
+                    alt="delete"
+                    class="delete-icon"
+                  />
+                </div>
+              </div>
+              <button class="checkout">Checkout</button>
+            </div>
+          </div>
+          <div class="cart-empty">
+            <h2 class="cart-heading">Cart</h2>
+            <hr />
+            <div class="cart-content">
+              <p>Your cart is cart-empty</p>
+            </div>
+          </div>
+        </div>
         <img
           src="./images/image-product-1.jpg"
           alt="product image"
