--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </div>
       </div>
       <div class="nav-right">
+        <div class="notification">
+          <p class="total-cart-items">0</p>
+        </div>
         <div class="cart-image">
           <img src="./images/icon-cart.svg" alt="cart icon" class="cart" />
         </div>
