--- a/index.html
+++ b/index.html
@@ -114,26 +114,28 @@
             </div>
           </div>
         </div>
-        <img
-          src="./images/image-product-1.jpg"
-          alt="product image"
-          class="img-1 product-image"
-        />
-        <img
-          src="./images/image-product-2.jpg"
-          alt="product image"
-          class="img-2 product-image"
-        />
-        <img
-          src="./images/image-product-3.jpg"
-          alt="product image"
-          class="img-3 product-image"
-        />
-        <img
-          src="./images/image-product-4.jpg"
-          alt="product image"
-          class="img-4 product-image"
-        />
+        <div class="images">
+          <img
+            src="./images/image-product-1.jpg"
+            alt="product image"
+            class="img-1 product-image"
+          />
+          <img
+            src="./images/image-product-2.jpg"
+            alt="product image"
+            class="img-2 product-image"
+          />
+          <img
+            src="./images/image-product-3.jpg"
+            alt="product image"
+            class="img-3 product-image"
+          />
+          <img
+            src="./images/image-product-4.jpg"
+            alt="product image"
+            class="img-4 product-image"
+          />
+        </div>
       </div>
     </div>
     <div class="content-box">
