--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="notification">
           <p class="total-cart-items">0</p>
         </div>
-        <div class="cart-image">
+        <button class="cart-image">
           <img src="./images/icon-cart.svg" alt="cart icon" class="cart" />
-        </div>
+        </button>
         <div class="user-profile">
           <img
             src="./images/image-avatar.png"
