--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   </div>
                   <div class="product-details">
                     <p class="name">Fall Limited Edition Sneakers</p>
-                    <p class="total-price">vvvvv</p>
+                    <p class="total-price"></p>
                   </div>
                 </div>
                 <div class="delete">
